--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -30,7 +30,7 @@
 
     <div class="total clearfix">
       <span class="pull-right">
-          总计 <%= render_cart_total_price(current_cart) %> CNY
+          总计 <%= render_cart_total_price(current_cart) %> 元
       </span>
     </div>
 
